(#110)이미지첨부 미리보기 기능 구현

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=737a5b7f66c99d87f0990248c6e6b491"></script>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%
+  "></script>
   <title>Coffee With Me</title>
 </head>
 
